--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 
                 <ul class="secondary-nav">
-                    <li class="current"><a href="#">Home</a></li>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li class="go-premium-cta"><a href="#">Go Premium</a></li>
+
                 </ul>
             </nav>
         </div>
